# ML

./: README.md
GPT/: pyproject.toml
GPT/gpt2/: scratch.ipynb  train_gpt2.py
GPT/smol-gpt/: bigram.py  scaled-output.txt  smol-gpt.ipynb  v2.py
makemore/: 1_makemore.ipynb  3_makemore_mlp.ipynb  3_mlp.ipynb  4_makemore_mlp_p2.ipynb  5_makemore_backprop.ipynb  6_wavenet.ipynb  makemore.ipynb  makemore_mlp.ipynb  makemore_trigram.ipynb  pyproject.toml
micrograd/: micrograd.ipynb  pyproject.toml
nvidia_intro_to_dl_backups/: 01_mnist.ipynb
