[tool.poetry]
name = "makemore"
version = "0.1.0"
description = ""
authors = ["Electronica-dev <srsamartha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "^2.9.0"
matplotlib = "^3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
