[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Electronica-dev <srsamartha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "^2.3.1"
matplotlib = "^3.10.3"
graphviz = "^0.21"
torch = "^2.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
